# xtask

./: .env  .env.dev  .env.dev.secrets  .env.prod  .env.prod.secrets  .env.stag  .env.stag.secrets  .env.test  .env.test.secrets  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  _typos.toml  notes.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
crates/tracel-xtask/: Cargo.toml  README.md
crates/tracel-xtask-cli/: Cargo.toml
crates/tracel-xtask-cli/src/: args.rs  deps.rs  emojis.rs  main.rs  skill.rs  test.rs
crates/tracel-xtask-commands/: Cargo.toml
crates/tracel-xtask-commands/src/: lib.rs  macros.rs
crates/tracel-xtask-commands/src/commands/: build.rs  bump.rs  check.rs  compile.rs  coverage.rs  dependencies.rs  doc.rs  fix.rs  mod.rs  publish.rs  test.rs  vulnerabilities.rs
crates/tracel-xtask-commands/src/utils/: cargo.rs  helpers.rs  mod.rs  process.rs  workspace.rs
crates/tracel-xtask-macros/: Cargo.toml  README.md
crates/tracel-xtask-macros/src/: lib.rs
crates/tracel-xtask-utils/: Cargo.toml
crates/tracel-xtask-utils/src/: build_helpers.rs  cargo.rs  cleanup.rs  environment.rs  lib.rs  logging.rs  mod.rs  process.rs  prompt.rs  rustup.rs  spinner.rs  terraform.rs  time.rs  workspace.rs
crates/tracel-xtask-utils/src/aws/: asg_instance_picker.rs  cli.rs  ec2_tag_instance_picker.rs  images.rs  instance_logs.rs  instance_system_log.rs  mod.rs  naming.rs  regions.rs
crates/tracel-xtask-utils/src/gcp/: cli.rs  mod.rs  naming.rs  regions.rs
crates/tracel-xtask/src/: context.rs  environment.rs  lib.rs  logging.rs  versions.rs
crates/tracel-xtask/src/commands/: aws_container.rs  build.rs  bump.rs  check.rs  clean.rs  compile.rs  container.rs  coverage.rs  dependencies.rs  doc.rs  docker.rs  docker_compose.rs  fix.rs  gcp_container.rs  gcp_secrets.rs  host.rs  image.rs  infra.rs  mod.rs  object.rs  publish.rs  secrets.rs  test.rs  validate.rs  vulnerabilities.rs
crates/tracel-xtask/src/utils/: aws_cli.rs  cargo.rs  cleanup.rs  git.rs  helpers.rs  mod.rs  process.rs  prompt.rs  rustup.rs  terraform.rs
crates/tracel-xtask/src/utils/aws/: asg_instance_picker.rs  cli.rs  ec2_tag_instance_picker.rs  instance_logs.rs  instance_system_log.rs  mod.rs  naming.rs  regions.rs
crates/xtask-common/: Cargo.toml
crates/xtask-common/src/: lib.rs  logging.rs  prelude.rs  versions.rs
crates/xtask-common/src/commands/: build.rs  bump.rs  check.rs  ci.rs  compile.rs  coverage.rs  dependencies.rs  doc.rs  fix.rs  mod.rs  publish.rs  pull_request_checks.rs  test.rs  vulnerabilities.rs
crates/xtask-common/src/utils/: cargo.rs  helpers.rs  mdbook.rs  mod.rs  process.rs  time.rs
crates/xtask-macros/: Cargo.toml
crates/xtask-macros/src/: lib.rs
crates/xtask-tests/: Cargo.toml
crates/xtask-tests/src/: main.rs
crates/xtask-tests/src/commands/: extended_build_args.rs  extended_build_new_sub_commands.rs  extended_check_sub_commands.rs  extended_target.rs  extended_target_alias.rs  extended_test_args.rs  fix.rs  mod.rs  my_command.rs  my_command_with_sub_commands.rs
crates/xtask-tests/tests/: test_examples.rs
xtask/: Cargo.toml
xtask-core/: Cargo.toml
xtask-core/src/: main.rs
xtask/src/: main.rs
xtask/src/commands/: build.rs  extended_build_args.rs  extended_build_new_sub_commands.rs  extended_check_sub_commands.rs  extended_target.rs  extended_test_args.rs  fix.rs  foo.rs  mod.rs  my_command_with_sub_commands.rs  new_command.rs  validate.rs
xtask/tests/: test_examples.rs
