[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/*",
    "xtask",
]

[workspace.package]
edition = "2021"
version = "4.2.3"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display"], default-features = false }
ctrlc = "3.4.7"
dotenvy = "0.15.7"
env_logger = "0.11.8"
heck = "0.5.0"
log = { version = "0.4.27" }
proc-macro2 = "1.0.95"
quote = "1.0.40"
rand = { version = "0.9.1" }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = {version = "0.27.1", features = ["derive"]}
syn = {version = "~2.0" , features = ["full"]}
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }

# for tests
rstest = "0.25.0"
serial_test = "3.2.0"
tempfile = "3.23.0"

[profile.dev]
debug = 0 # Speed up compilation time and not necessary.
