[workspace]
resolver = "2"
members = [
    "crates/*",
    "xtask-core",
]

[workspace.package]
edition = "2024"
version = "4.9.0"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display"], default-features = false }
ctrlc = "3.4.7"
dotenvy = "0.15.7"
env_logger = "0.11.8"
heck = "0.5.0"
home = "0.5.12"
log = { version = "0.4.27" }
proc-macro2 = "1.0.95"
quote = "1.0.40"
rand = { version = "0.9.1" }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = {version = "0.27.1", features = ["derive"]}
syn = {version = "~2.0" , features = ["full"]}
toml = { version = "0.9.8", default-features = false, features = ["display", "parse", "serde"] }
ureq = { version = "3", features = ["_tls", "json"] }
zip = "6.0.0"

# for tests
rstest = "0.25.0"
serial_test = "3.2.0"
tempfile = "3.23.0"

[profile.dev]
debug = 0 # Speed up compilation time and not necessary.
