[package]
authors = ["Tracel Technologies Inc."]
categories = ["Command-line interface", "Command line utilities", "Development tools"]
description = "Macros for tracel-xtask crate."
keywords = ["xtask", "ci", "cicd", "cli", "cargo", "extensible", "macros"]
edition.workspace = true
license.workspace = true
name = "tracel-xtask-macros"
readme.workspace = true
repository = "https://github.com/tracel-ai/xtask"
version.workspace = true
rust-version = "1.79"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
