[package]
authors = ["Tracel Technologies Inc."]
categories = ["command-line-interface", "command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
description = "Macros for tracel-xtask crate."
keywords = ["xtask", "macros"]
edition.workspace = true
license.workspace = true
name = "tracel-xtask-macros"
readme = "README.md"
repository = "https://github.com/tracel-ai/xtask/tree/main/crates/tracel-xtask-macros"
version.workspace = true
rust-version = "1.79"

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
