[package]
authors = ["Tracel Technologies Inc."]
categories = ["command-line-interface", "command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
description = "Reusable and Extensible xtask commands to manage repositories."
keywords = ["xtask", "cli", "cargo", "extensible"]
edition.workspace = true
license.workspace = true
name = "tracel-xtask"
readme.workspace = true
repository = "https://github.com/tracel-ai/xtask/tree/main/crates/tracel-xtask"
version.workspace = true
rust-version = "1.85"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
derive_more = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
home = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
toml = { workspace = true }
tracel-xtask-macros = { path = "../tracel-xtask-macros", version = "=4.8.0" }
ureq = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
