[package]
name = "xtask-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["bump", "check",  "ci", "publish", "test", "pull_request_check"]
bump = []
check = []
ci = []
publish = []
pull_request_check = []
test = []

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tracing-subscriber = { workspace = true }
