[package]
name = "xtask-common"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }